--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
+    font-family: "Roboto", "Arial", "serif";
 }
 
 /* HEADER */
@@ -29,22 +30,37 @@ body {
 .game-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 5px solid white;
+    border: 5px ridge white;
+    border-radius: 12px;
 }
 
 .score-container {
     display: flex;
     justify-content: space-evenly;
-    gap: 52px;
     padding: 18px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 18px 0px;
+}
+
+.logo-container div {
+    font-size: 100px;
 }
 
 .btn-container {
     display: flex;
     gap: 32px;
-    padding: 18px;
+    margin: 50px 18px 18px 18px;
+}
+
+.btn-container button p:first-child {
+    margin: 12px;
+    font-size: 100px;
 }
 
 button {
